--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,6 @@
 theme: jekyll-theme-leap-day
 exclude: [authentication_tutorial]
+title: Welcome to the ToDo&Co Repository homepage!
+description: Feel free to bookmark this to keep an eye on my project updates.
+permalink: https://bigboss-oualid.github.io/test/github_pages/
+baseurl: it-bigboss.de
