--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,5 +2,12 @@ theme: jekyll-theme-leap-day
 exclude: [authentication_tutorial]
 title: Welcome to the ToDo&Co Repository homepage!
 description: Feel free to bookmark this to keep an eye on my project updates.
-permalink: https://bigboss-oualid.github.io/test/github_pages/
+permalink: https://bigboss-oualid.github.io/test/docs/github_pages/
 baseurl: it-bigboss.de
+header_pages:
+  - pages/installation.md
+  - pages/sommaire.md
+author:
+  name: BigBoss Walid
+  email: "oualid.boulatar@it-bigboss.de"
+show_excerpts: true
