--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,3 +11,22 @@ author:
   name: BigBoss Walid
   email: "oualid.boulatar@it-bigboss.de"
 show_excerpts: true
+
+# Enter the following platform usernames if you would like for them to appear on your site.
+owner:
+  name: oualid
+  avatar: bio-photo.jpg
+  bio: "This is a sample Jekyll academic website."
+  email: oualid.boulatar@it-bigboss.de
+  # Do not include the @ symbol in your Twitter username
+  twitter: laderast
+  linkedin: #username
+  github: laderast
+  orcid: # ID Number (ex. 0000-0000-0000-0000)
+  researchgate: #username
+  mendeley: #username
+  google:
+    plus: #username
+    analytics:
+    verify:
+    scholar: #id
