--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ exclude: [authentication_tutorial]
 title: Welcome to the ToDo&Co Repository homepage!
 description: Feel free to bookmark this to keep an eye on my project updates.
 permalink: https://bigboss-oualid.github.io/test/docs/github_pages/
-baseurl: it-bigboss.de
+#baseurl: it-bigboss.de
 header_pages:
   - pages/installation.md
   - pages/sommaire.md
