--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,15 +1,15 @@
 theme: jekyll-theme-leap-day
 exclude: [authentication_tutorial]
 title: Welcome to the ToDo&Co Repository homepage!
-description: Feel free to bookmark this to keep an eye on my project updates.
+description: Feel free to bookmark this to keep an eye on my project updates...
 #permalink: https://bigboss-oualid.github.io/test/docs/
 #baseurl: it-bigboss.de
-header_pages:
-  - pages/installation.md
-  - pages/sommaire.md
-author:
-  name: BigBoss Walid
-  email: "oualid.boulatar@it-bigboss.de"
+#header_pages:
+  #- pages/installation.md
+  #- pages/sommaire.md
+#author:
+  #name: BigBoss Walid
+  #email: "oualid.boulatar@it-bigboss.de"
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
