--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-leap-day
-exclude: [authentication_tutorial]
 title: Welcome to the ToDo&Co Repository homepage!
-description: Feel free to bookmark this to keep an eye on my project updates...
-#show_downloads: true
+description: Feel free to bookmark this to keep an eye on my project updates.
+exclude: [authentication_tutorial]
+show_downloads: true
 #permalink: https://bigboss-oualid.github.io/test/docs/
 #baseurl: it-bigboss.de
 #header_pages:
