update install page

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,13 +4,8 @@ description: Feel free to bookmark this to keep an eye on my project updates.
 exclude: [authentication_tutorial]
 show_downloads: true
 baseurl: "/test"
-production_url : https://bigboss-oualid.github.io/test
-BASE_PATH : http://bigboss-oualid.com/test/github_pages
-#permalink: https://bigboss-oualid.github.io/test/docs/
-#baseurl: it-bigboss.de
-#header_pages:
-  #- pages/installation.md
-  #- pages/sommaire.md
+production_url : https://bigboss-oualid.github.io/test/github_pages
+BASE_PATH : http://bigboss-oualid.com/test
 #author:
   #name: BigBoss Walid
   #email: "oualid.boulatar@it-bigboss.de"
