--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,8 +4,8 @@ description: Feel free to bookmark this to keep an eye on my project updates.
 exclude: [authentication_tutorial]
 show_downloads: true
 baseurl: "/test"
-production_url : https://bigboss-oualid.github.io/test
-BASE_PATH : http://bigboss-oualid.com/test/github_pages
+production_url : https://bigboss-oualid.github.io/test/github_pages
+BASE_PATH : http://bigboss-oualid.com/test
 #author:
   #name: BigBoss Walid
   #email: "oualid.boulatar@it-bigboss.de"
