--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,9 +3,14 @@ title: Welcome to 'ToDo&Co' Repository homepage!
 description: Feel free to bookmark this to keep an eye on my project updates.
 exclude: [authentication_tutorial]
 show_downloads: true
-baseurl: /test
-production_url : https://bigboss-oualid.github.io/test/github_pages/
-BASE_PATH : http://bigboss-oualid.github.io/test/github_pages/index.html
+baseurl: "/test/github_pages"
+production_url : https://bigboss-oualid.github.io/test/github_pages
+BASE_PATH : http://bigboss-oualid.com/test/github_pages/index.md
+#permalink: https://bigboss-oualid.github.io/test/docs/
+#baseurl: it-bigboss.de
+#header_pages:
+  #- pages/installation.md
+  #- pages/sommaire.md
 #author:
   #name: BigBoss Walid
   #email: "oualid.boulatar@it-bigboss.de"
