--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,8 +4,8 @@ description: Feel free to bookmark this to keep an eye on my project updates.
 exclude: [authentication_tutorial]
 show_downloads: true
 baseurl: "/github_pages"
-production_url : http://bigboss-oualid.github.io/github_pages
-BASE_PATH : http://bigboss-oualid.github.io/github_pages/index.md
+production_url : http://bigboss-oualid.github.io/test
+BASE_PATH : http://bigboss-oualid.github.io/test/index.html
 #permalink: https://bigboss-oualid.github.io/test/docs/
 #baseurl: it-bigboss.de
 #header_pages:
