--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ title: Welcome to 'ToDo&Co' Repository homepage!
 description: Feel free to bookmark this to keep an eye on my project updates.
 exclude: [authentication_tutorial]
 show_downloads: true
-baseurl: "/test"
+baseurl: "/test/github_pages"
 production_url : http://bigboss-oualid.github.io/test/github_pages
 BASE_PATH : http://bigboss-oualid.github.io/test/index.md
 #permalink: https://bigboss-oualid.github.io/test/docs/
