--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-leap-day
 title: Welcome to 'ToDo&Co' Repository homepage!
 description: Feel free to bookmark this to keep an eye on my project updates.
-exclude: [authentication_tutorial]
+#exclude: [authentication_tutorial]
 show_downloads: true
 header_pages:
   - pages/installation.md
